211019 auto propagation: step 2, add storage cell of obs
211018 auto propagation: step 1, add crossing obs
211017 add support for adelaide Phoenix
211017 fix cnn projector issue
211011 add knn action for transition graph
211011 add cnn projector
210630 value propagation (slow)
210630 transition graph
210630 run 26 atari games
210629 add mixed sync mode
210627 sync mode
210627 add debug.sh
210627 add obs to trajectory
210627 change __pycache__ location
210625 optimal graph tuning
210610 optimal graph
210610 determ mcts (over-estimated) done
210603 optimize get_action
210602 concurrent policy
210525 del gRPC
210525 add gRPC
210525 multi processing
210525 optimise mcts search speed
210525 optimise node adding speed
210524 server run
210520 add run.sh
210520 delete ci file
210511 add MCTS
210505 remove redundant tgn code
210505 first run
210505 initial commit