@@ -1,10 +1,9 @@
 import time
 
-from src.util.tools import IO
+from src.util.tools import IO, Logger
 from src.module.context import Profile as P
 from src.module.agent.memory.storage import TransitionStorage
 from src.module.agent.memory.storage import OptimalStorage
-from src.module.agent.memory.storage import OptimalStorageCell, TransitionStorageCell
 import numpy as np
 from sklearn.neighbors import KDTree
 from src.module.agent.memory.indexer import Indexer
@@ -24,7 +23,7 @@ class Graph:
     def get_action(self, obs):
         pass
 
-    def store_increments(self, trajectory, total_reward):
+    def store_increments(self, trajectory, value):
         pass
 
     def sync(self):
@@ -85,66 +84,66 @@ class OptimalGraph(Graph):
 
     def get_action(self, obs):
         if obs in self.main:
-            return self.main[obs].best_action
+            return self.main[obs][OptimalStorage.best_action]
         else:
             return None
 
-    def store_increments(self, trajectory, total_reward):  # by the non-head
-        for last_obs, pre_action, obs, reward in trajectory:
-            # check the importance of the traj to determine whether to add it
-            if last_obs not in self.main:
-                add = True
-            elif self.main[last_obs].total_reward < total_reward:
-                add = True
-            else:
-                add = False
+    def store_increments(self, trajectory, value):  # by the non-head
+        # 1. store trajector info
+        trajectory_ind = Indexer.get_trajectory_ind(trajectory)
+        if trajectory_ind not in self.increments.trajectory_infos:
+            self.increments.trajectory_infos[trajectory_ind] = [
+                value,
+                trajectory[0][0],
+                list(),
+                np.zeros(len(trajectory))
+            ]
 
-            if add:
-                if P.statistic_crossing_obs:
-                    # check crossing obs
-                    if last_obs not in self.main and last_obs not in self.increments:
-                        last_obs_existence = 0  # check the existence in the graph
-                    else:
-                        last_obs_existence = 1
-                    if obs not in self.main and obs not in self.increments:
-                        obs_existence = 0
-                    else:
-                        obs_existence = 1
-                    if last_obs_existence + obs_existence == 1:
-                        if last_obs_existence == 1:
-                            self.increments.crossing_obs.add(last_obs)
-                        if obs_existence == 1:
-                            self.increments.crossing_obs.add(obs)
+        # 2. store obs info
+        for step, [last_obs, pre_action, obs, reward] in enumerate(trajectory):
+            # 2.1 add traj info
+            self.increments.trajectory_infos[trajectory_ind][OptimalStorage.action].append(pre_action)
+            self.increments.trajectory_infos[trajectory_ind][OptimalStorage.reward][step] = reward
 
-                # add last_oobs to the storage
-                info = OptimalStorageCell(action=pre_action, total_action=total_reward)
-                if P.sync_mode == P.sync_modes[0]:
-                    if last_obs not in self.increments:
-                        self.increments[last_obs] = info
-                        self.increments.update_max(total_reward, last_obs)
-                    elif self.increments[last_obs].total_reward < total_reward:
-                        self.increments[last_obs] = info
-                        self.increments.update_max(total_reward, last_obs)
-                if P.sync_mode == P.sync_modes[1]:
-                    self.increments[last_obs] = info
-                    self.increments.update_max(total_reward, last_obs)
-                if P.sync_mode == P.sync_modes[2]:
-                    if last_obs not in self.increments:
-                        self.increments[last_obs] = info
-                        self.increments.update_max(total_reward, last_obs)
-                    elif self.increments.max_value * P.sync_tolerance < total_reward:
-                        self.increments[last_obs] = info
-                        self.increments.update_max(total_reward, last_obs)
+            # 2.2 statistic crossing obs
+            if P.statistic_crossing_obs:
+                if last_obs not in self.main and last_obs not in self.increments:
+                    last_obs_existence = 0  # check the existence in the graph
+                else:
+                    last_obs_existence = 1
+                if obs not in self.main and obs not in self.increments:
+                    obs_existence = 0
+                else:
+                    obs_existence = 1
+                if last_obs_existence + obs_existence == 1:  # corssing
+                    if last_obs_existence == 1:
+                        self.increments.crossing_obs.add(last_obs)
+                    if obs_existence == 1:
+                        self.increments.crossing_obs.add(obs)
+
+            # 2.3 add last_oobs to the storage
+            if last_obs not in self.increments:
+                self.increments[last_obs] = [None, dict()]
+            self.increments[last_obs][OptimalStorage.best_action] = pre_action
+            self.increments[last_obs][OptimalStorage.afiliated_trajectories][trajectory_ind] = step
 
     def merge_inc(self, inc):  # by the head
         for last_obs in inc:
             if last_obs not in self.main:
                 self.main[last_obs] = inc[last_obs]
-                self.main.update_max(inc[last_obs].total_reward, last_obs)
-            elif self.main[last_obs].total_reward < inc[last_obs].total_reward:
-                self.main[last_obs] = inc[last_obs]
-                self.main.update_max(inc[last_obs].total_reward, last_obs)
+            else:
+                self.main[last_obs][OptimalStorage.afiliated_trajectories].update(
+                    inc[last_obs][OptimalStorage.afiliated_trajectories]
+                )
+        for trajectory_ind in inc.trajectory_infos:
+            self.main.update_max(
+                inc.trajectory_infos[trajectory_ind][OptimalStorage.value], 
+                inc.trajectory_infos[trajectory_ind][OptimalStorage.init_obs]
+            )
         self.main.crossing_obs = self.main.crossing_obs.union(inc.crossing_obs)
+
+    def post_process(self):
+        pass
 
 
 class TransitionGraph(Graph):
@@ -158,7 +157,7 @@ class TransitionGraph(Graph):
 
     def get_action(self, obs, raw_obs):
         if obs in self.main:
-            return np.argmax(self.main[obs].action)
+            return np.argmax(self.main[obs][TransitionStorage.action])
         else:
             if raw_obs not in self.known_states:
                 self.known_states.append(raw_obs)
@@ -171,7 +170,7 @@ class TransitionGraph(Graph):
                 for neighbor in neighbors:
                     ind = Indexer.get_ind(self.known_states[neighbor])
                     if ind in self.main:
-                        values += self.main[ind].action
+                        values += self.main[ind][TransitionStorage.action]
                         num_validate_nb += 1
                 if num_validate_nb > 0:
                     values /= num_validate_nb
@@ -181,18 +180,18 @@ class TransitionGraph(Graph):
 
             return None
 
-    def store_increments(self, trajectory, total_reward):
+    def store_increments(self, trajectory, value):
         # filtering
         if P.sync_mode == P.sync_modes[0]:
-            if self.increments.max_value >= total_reward:
+            if self.increments.max_value >= value:
                 return
         if P.sync_mode == P.sync_modes[2]:
-            if self.increments.max_value * P.sync_tolerance >= total_reward:
+            if self.increments.max_value * P.sync_tolerance >= value:
                 return
 
         # update increment
         self.increments.add_end(trajectory[-1][2])
-        self.increments.update_max(total_reward)
+        self.increments.update_max(value)
         current_value = 0
         for last_obs, pre_action, obs, reward in trajectory[::-1]:
             if P.statistic_crossing_obs:
@@ -213,45 +212,51 @@ class TransitionGraph(Graph):
 
             current_value = current_value * P.gamma + reward
             if obs not in self.increments:
-                self.increments[obs] = TransitionStorageCell(action=np.zeros([P.num_action]), parents=dict(), reward=0)
-            self.increments[obs].parents[last_obs] = pre_action
-            self.increments[obs].reward = reward
+                self.increments[obs] = [
+                    np.zeros([P.num_action]),
+                    dict(),
+                    0
+                ]
+            self.increments[obs][TransitionStorage.parents][last_obs] = pre_action
+            self.increments[obs][TransitionStorage.reward] = reward
             if last_obs not in self.increments:
-                self.increments[last_obs] = TransitionStorageCell(action=np.zeros([P.num_action]), parents=dict(), reward=0)
-
-            if self.increments[last_obs].action[pre_action] < current_value:
-                self.increments[last_obs].action[
+                self.increments[last_obs] = [
+                    np.zeros([P.num_action]),
+                    dict(),
+                    0
+                ]
+            if self.increments[last_obs][TransitionStorage.action][pre_action] < current_value:
+                self.increments[last_obs][TransitionStorage.action][
                     pre_action
                 ] = current_value  # may over estimate the value
-            # self.increments[last_obs]['action'][pre_action] = 0.8 * self.increments[last_obs]['action'][pre_action] + 0.2 * current_value
 
     def merge_inc(self, inc):
         for last_obs in inc:
             if last_obs not in self.main:
                 self.main[last_obs] = inc[last_obs]
             else:
-                for p in inc[last_obs].parents:
-                    self.main[last_obs].parents[p] = inc[last_obs].parents[p]
+                for p in inc[last_obs][TransitionStorage.parents]:
+                    self.main[last_obs][TransitionStorage.parents][p] = inc[last_obs][TransitionStorage.parents][p]
 
                 if not P.soft_merge:
                     # hard merge
-                    self.main[last_obs].action = np.maximum(
-                        self.main[last_obs].action, inc[last_obs].action
+                    self.main[last_obs][TransitionStorage.action] = np.maximum(
+                        self.main[last_obs][TransitionStorage.action], inc[last_obs][TransitionStorage.action]
                     )
 
-                    self.main[last_obs].reward = max(
-                        self.main[last_obs].reward, inc[last_obs].reward
+                    self.main[last_obs][TransitionStorage.reward] = max(
+                        self.main[last_obs][TransitionStorage.reward], inc[last_obs][TransitionStorage.reward]
                     )
                 else:
                     # soft merge
-                    self.main[last_obs].action = (
-                        self.main[last_obs].action * 0.8
-                        + inc[last_obs].action * 0.2
+                    self.main[last_obs][TransitionStorage.action] = (
+                        self.main[last_obs][TransitionStorage.action] * 0.8
+                        + inc[last_obs][TransitionStorage.action] * 0.2
                     )
 
-                    self.main[last_obs].reward = (
-                        self.main[last_obs].reward * 0.8
-                        + inc[last_obs].reward * 0.2
+                    self.main[last_obs][TransitionStorage.reward] = (
+                        self.main[last_obs][TransitionStorage.reward] * 0.8
+                        + inc[last_obs][TransitionStorage.reward] * 0.2
                     )
 
         self.main.update_max(inc.max_value)
@@ -267,10 +272,10 @@ class TransitionGraph(Graph):
     def back_propagation(self):
         while len(self.stack) > 0:
             cur_obs = self.stack.pop()
-            max_value = max(self.main[cur_obs].action)
-            for par_obs in self.main[cur_obs].parents:
-                action = self.main[cur_obs].parents[par_obs]
-                new_value = max_value * P.gamma + self.main[cur_obs].reward
-                if self.main[par_obs].action[action] < new_value:
-                    self.main[par_obs].action[action] = new_value
+            max_value = max(self.main[cur_obs][TransitionStorage.action])
+            for par_obs in self.main[cur_obs][TransitionStorage.parents]:
+                action = self.main[cur_obs][TransitionStorage.parents][par_obs]
+                new_value = max_value * P.gamma + self.main[cur_obs][TransitionStorage.reward]
+                if self.main[par_obs][TransitionStorage.action][action] < new_value:
+                    self.main[par_obs][TransitionStorage.action][action] = new_value
                 self.stack.append(par_obs)
