@@ -1,3 +1,6 @@
+211020 auto propagation: step 3, imrove memory consumption
+211020 auto propagation: remove storage cell due to high memory consumption
+211019 auto propagation: step 3, add trajectory info
 211019 auto propagation: step 2, add storage cell of obs
 211018 auto propagation: step 1, add crossing obs
 211017 add support for adelaide Phoenix
